2009-08-27  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/configure (VM_VERSION): Generate automatically from
	VMMaker version and SVN revision.  Remove SQ_VERSION.

	* vm/config.cmake: Extract major.minor.patch-release from
	version.

	* CMakeLists.txt: Remove references to SQ_VERSION.

2009-08-27    <piumarta@ubuntu.piumarta.com>

	* vm/build.cmake: Install squeak.sh.

	* cmake/squeak.in: Deal with plugin path and pulseaudio; move menu
	cruft elsewhere.

	* cmake/squeak.sh.in: Added for launching from somewhere that
	doesn't have a prompt.

2009-08-26  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/Mpeg3Plugin/config.cmake: Added.

	* CMakeLists.txt: Print C flags while configuring.

	* cmake/Plugins.cmake: Recognise --without-PluginName for all
	plugins.

	* src: Regenerate from Balloon3D-Plugins-ar.4.mcz
	DBus-Plugin-bf.32.mcz GStreamer-Plugins-JMM.16.mcz
	Kedama-Plugins-yo.1.mcz Rome-Plugin-yo.39.mcz
	OSProcessPlugin-dtl.16.mcz
	VMConstruction-Plugins-AioPlugin-dtl.9.mcz
	VMConstruction-Plugins-XDisplayControlPlugin-dtl.7.mcz
	VMMaker-dtl.137.mcz

2009-08-26    <piumarta@ubuntu.piumarta.com>

	* vm-display-X11/sqUnixX11.c (x2sqModifier): Do not map Caps Lock
	to shift modifier.

2009-08-26  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/OggPlugin/config.cmake: Do not build OggPlugin on MacOS
	X due to broken headers in the framework.

	* plugins/SqueakFFIPrims/config.cmake: Add missing argument when
	requiring libffi.

2009-08-26    <piumarta@netbsd.piumarta.com>

	* vm-sound-Sun/config.cmake: Require stropts.h and Solaris OS.

	* plugins/UUIDPlugin/config.cmake: Find libuuid but don't require it.

2009-08-26    <piumarta@solaris.piumarta.com>

	* plugins/PseudoTTYPlugin/config.cmake: Check for libutil and
	unix98 ptys independently.

	* vm-sound-Sun/config.cmake: Fail if head missing in both
	potential locations.

2009-08-27  Ian Piumarta  <piumarta@freebsd.piumarta.com>
